# Evaluasi-Tengah-Semester-Pemograman-Kontroller

./: qt
Core/Inc/: heater.h  pump.h  sensor_Ultrasonic.h
Core/Src/: katup pemanas.c  main.c  sensor_MPX.c  sensor_Ultrasonic.c  sensor_YF.c  sensor_temperature.c
QT_GUI/: CMakeLists.txt  Makefile  QtInfluxV2App  QtInfluxV2App.pro  influxreader.h  main.cpp  mainwindow.cpp  mainwindow.h  moc_influxreader.cpp  moc_mainwindow.cpp
